--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html>
-	<h1> Hello World! </h1>
+	<head>
+    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    	<link rel="stylesheet" href="/style.css">
+	</head>
+	<body>
+		<h4> Hello World! </h4>
+		<input type= "text" value= "insert to-do" />
+	</body>
 </html>
