--- a/popup.html
+++ b/popup.html
@@ -12,8 +12,9 @@
 	<body>
 		<script src="popup.js"></script>
 		<div class= "header">
-			Simple To Do List
+			To-do List
 		</div>
+		<ul class= "tasks"></ul>
 		<div class="add">
 			<input id="new-task" placeholder="Type a new task..." data-i18n="newTask"></input>
 		<div id="submit" data-i18n="addTask"><button>Add</button></div>
